backends/drm: Fix crash in OutputDeviceV2Interface::updateModes()

When the custom modes change, the corresponding OutputMode objects will
be recreated. If the current mode is a custom mode, it will be gone too.

DrmOutput::queueChanges() needs to ensure that the currentMode is still
listed in the modes list, otherwise other kwin components can start
hitting into an unexpected output state. For example, the
OutputDeviceV2Interface expects that the current mode is guaranteed to
be included in the BackendOutput::modes() list.

BUG: 516452