src/backends/drm/drm_output.h
@@ -83,8 +83,7 @@ private:
     void updateBrightness(double newBrightness, double newArtificialHdrHeadroom, double newDimming);
     void maybeScheduleRepaints(const State &next);
     std::optional<uint32_t> decideAutomaticBpcLimit() const;
-
-    QList<std::shared_ptr<OutputMode>> getModes(const State &state) const;
+    void populateModes(State *state) const;
 
     DrmGpu *const m_gpu;
     DrmPipeline *m_pipeline;
